<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28dp"
            android:text="@string/create_profile"
            android:textColor="@color/black"
            android:textSize="@dimen/size_26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_4dp"
                android:layout_marginRight="@dimen/margin_4dp"
                android:layout_weight="1"
                android:background="@drawable/et_background"
                android:elevation="@dimen/elevation_1dp"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/padding_12dp"
                android:textColorHint="@color/black"
                android:textSize="@dimen/size_14sp" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_4dp"
                android:layout_marginStart="@dimen/margin_4dp"
                android:layout_weight="1"
                android:background="@drawable/et_background"
                android:elevation="@dimen/elevation_1dp"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/padding_12dp"
                android:textColorHint="@color/black"
                android:textSize="@dimen/size_14sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@drawable/et_background"
            android:elevation="@dimen/elevation_1dp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/padding_12dp"
            android:textColorHint="@color/black"
            android:textSize="@dimen/size_14sp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@drawable/et_background"
            android:elevation="@dimen/margin_4dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="@dimen/padding_10dp"
            android:textColorHint="@color/black"
            android:textSize="@dimen/size_14sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@drawable/et_background"
            android:elevation="@dimen/margin_4dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_10dp"
            android:textColorHint="@color/black"
            android:textSize="@dimen/size_14sp" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@drawable/et_background"
            android:elevation="@dimen/margin_4dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_10dp"
            android:textColorHint="@color/black"
            android:textSize="@dimen/size_14sp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@drawable/btn_blue_background"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/size_16sp" />

        <TextView
            android:id="@+id/tv_already_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:padding="@dimen/margin_16dp"
            android:text="@string/already_registered_signin"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16sp" />

    </LinearLayout>
</ScrollView>
