<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/et_background"
        android:elevation="@dimen/elevation_1dp"
        android:hint="@string/email"
        android:padding="14dp"
        android:textColorHint="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_20dp">

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:layout_marginRight="@dimen/margin_4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_red_background"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/size_16sp" />

        <Button
            android:id="@+id/btn_submit"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_4dp"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_blue_background"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/size_16sp" />


    </LinearLayout>

</LinearLayout>